# barinya_bot

./: .dockerignore  .env.example  .env.production  .env.test  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.bot  Dockerfile.bot.dev  Dockerfile.dev  Makefile  QUICKSTART.md  README.md  SETUP.md  cleanup_logs.sh  docker-compose-dev.yml  docker-compose.yml  nginx.conf.backup  pyproject.toml  requirements.txt
IikoPlugin/IikoBonusPlugin/: Plugin.cs
alembic/: env.py
alembic/versions/: 2024_12_09_1500-001_initial_schema.py  2025_12_18_1353-cf3b0e6119ec_change_telegram_id_to_bigint.py
bot/: error_handlers.py  main.py  middleware.py  states.py
bot/handlers/: __init__.py  admin.py  commands.py  events.py
data_v2/: data.json
make/: base.mk  dev.mk  prod.mk
nginx/: Dockerfile  nginx.conf
nginx/conf.d/: blockers.conf  compression.conf  connect_limits.conf  logging.conf  servers.conf  whitelist.conf
scripts/: block_ip.sh  clear_cache.sh  deploy.sh  init_db.py  init_db.sql  init_statistics_scheduler.py  loyalty_management_example.py  manual-certs-copy.sh  setup-certbot-interactive.sh  setup_ssl.sh  setup_webhook.py  statistics_example.py  test_static.sh  verify_setup.py
shared/: __init__.py  config.py  database.py  error_handlers.py  logging_config.py  models.py  redis.py
shared/services/: __init__.py  cache_service.py  cached_statistics_service.py  jwt.py  (+12 more)
static/: index.html  version.txt
tests/: conftest.py  test_services.py  test_services.py.backup
ton-rproxy/: Dockerfile
webapp/: __init__.py  main.py  schemas.py
www/: package.json  vite.config.js
(+168 files in other folders)
