[project]
name = "telegram-bar-bot"
version = "0.1.0"
description = "Telegram bot for bar with loyalty program and referral system"
requires-python = ">=3.11"
dependencies = [
    "aiogram==3.4.1",
    "aiohttp==3.9.1",
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "jinja2==3.1.3",
    "sqlalchemy==2.0.25",
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "hypothesis==6.92.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
